[tool.poetry]
name = "adb-perm"
version = "0.1.0"
description = ""
authors = ["Luca Albuquerque <lucalacerda1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pylama = "^7.7.1"
black = "^20.8b1"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
